<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- option to edit location -> use text field -->
    <!-- "key" value in SharedPreference-->
    <!-- single line of text -->
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />


    <ListPreference
        android:title="@string/pref_unit_label"
        android:key="@string/pref_unit_key"
        android:entries="@array/unit_options"
        android:entryValues="@array/unit_values"
        android:defaultValue="@string/pref_unit_default"
       />


</PreferenceScreen>